--- a/index.html
+++ b/index.html
@@ -22,8 +22,22 @@
 </head>
 
 <body class="background">`
+
+   
    <h1>Basic information of Harry Potter movies and books.</h1>
-   <nav><a href="index2.html" target="_blank">Movies Order Page</a></nav>
+
+   <nav>
+      <ul>
+        <li><a class="bookList" href="../Project/index2.html">Harry Potter Books List</a></li>
+        <li class="dropdown">
+          <a class="interesting" href="#">Interesting Links</a>
+          <ul class="dropdown-menu">
+            <li><a id="webLinks" href="https://www.wizardingworld.com/" target="_blank">Wizarding World Website</a></li>
+            <li><a id="webLinks" href="https://www.mugglenet.com/" target="_blank">Cool Facts Website (mugglenet)</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
    
    <section>
       <h2>Order of the Harry Potter movies.</h2>
@@ -31,14 +45,14 @@
 
       <div class="ListContainer">
          <ul class="UL">
-            <div class="movielink1"><li><a href="#1movie">Harry Potter and the Philosopher's Stone</a></li></div>
-            <div class="movielink2"><li><a href="#2movie">Harry Potter and the Chamber of Secrets</a></li></div>
-            <div class="movielink3"><li><a href="#3movie">Harry Potter and the Prisoner of Azkaban</a></li></div>
-            <div class="movielink4"><li><a href="#4movie">Harry Potter and the Goblet of Fire</a></li></div>
-            <div class="movielink5"><li><a href="#5movie">Harry Potter and the Order of the Phoenix</a></li></div>
-            <div class="movielink6"><li><a href="#6movie">Harry Potter and the Half-Blood Prince</a></li></div>
-            <div class="movielink7"><li><a href="#7movie">Harry Potter and the Deathly Hallows Part 1</a></li></div>
-            <div class="movielink8"><li><a href="#8movie">Harry Potter and the Deathly Hallows Part 2</a></li></div>
+            <div class="movielink1"><li><a href="#movie1">Harry Potter and the Philosopher's Stone</a></li></div>
+            <div class="movielink2"><li><a href="#movie2">Harry Potter and the Chamber of Secrets</a></li></div>
+            <div class="movielink3"><li><a href="#movie3">Harry Potter and the Prisoner of Azkaban</a></li></div>
+            <div class="movielink4"><li><a href="#movie4">Harry Potter and the Goblet of Fire</a></li></div>
+            <div class="movielink5"><li><a href="#movie5">Harry Potter and the Order of the Phoenix</a></li></div>
+            <div class="movielink6"><li><a href="#movie6">Harry Potter and the Half-Blood Prince</a></li></div>
+            <div class="movielink7"><li><a href="#movie7">Harry Potter and the Deathly Hallows Part 1</a></li></div>
+            <div class="movielink8"><li><a href="#movie8">Harry Potter and the Deathly Hallows Part 2</a></li></div>
          </ul>
       </div>
 
@@ -46,7 +60,7 @@
       <div class="container">
 
          <div class="images">
-            <img id="1movie" src="..\Project (1)\Philosopher's_Stone.jpg" alt="Philosopher's Stone">
+            <img id="movie1" src="..\Project\Philosopher's_Stone.jpg" alt="Philosopher's Stone">
          <div class="info">
             <p>Based on Harry Potter and the Philosopher's Stone book.</p>
             <p>Released: 16 November 2001.</p>
@@ -54,7 +68,7 @@
          </div>
 
          <div class="images">
-            <img id="2movie" src="..\Project (1)\the_Chamber_of_Secret.jpg" alt="the_Chamber_of_Secret">
+            <img id="movie2" src="..\Project\the_Chamber_of_Secret.jpg" alt="the_Chamber_of_Secret">
          <div class="info">
             <p>Based on Harry Potter and the Chamber of Secrets.</p>
             <p>Released: 15 November 2002.</p>
@@ -62,7 +76,7 @@
          </div>
 
          <div class="images">
-            <img id="3movie" src="..\Project (1)\Prisoner_of_azkaban.jpg" alt="Prisoner_of_azkaban">
+            <img id="movie3" src="..\Project\Prisoner_of_azkaban.jpg" alt="Prisoner_of_azkaban">
          <div class="info">
             <p>Based on Harry Potter and the Prisoner of Azkaban book.</p>
             <p>Released: 4 June 2004.</p>
@@ -70,7 +84,7 @@
          </div>
 
          <div class="images">
-            <img id="4movie" src="..\Project (1)\Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
+            <img id="movie4" src="..\Project\Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
          <div class="info">
             <p>Based on Harry Potter and the Goblet of Fire book.</p>
             <p>Released: 18 November 2005.</p>
@@ -78,7 +92,7 @@
          </div>
 
          <div class="images">
-            <img id="5movie" src="..\Project (1)\Order_of_the_Phoenix.jpg" alt="Order_of_the_Phoenix">
+            <img id="movie5" src="..\Project\Order_of_the_Phoenix.jpg" alt="Order_of_the_Phoenix">
          <div class="info">
             <p>Based on Harry Potter and the Order of the Phoenix book.</p>
             <p>Released: 11 July 2007.</p>
@@ -86,7 +100,7 @@
          </div>
 
          <div class="images">
-            <img id="6movie" src="..\Project (1)\Half-Blood_Prince.jpg" alt="Half-Blood_Prince">
+            <img id="movie6" src="..\Project\Half-Blood_Prince.jpg" alt="Half-Blood_Prince">
          <div class="info">
             <p>Based on Harry Potter and the Half-Blood Prince book.</p>
             <p>Released: 15 July 2009.</p>
@@ -94,7 +108,7 @@
          </div>
 
          <div class="images">
-            <img id="7movie" src="..\Project (1)\Deathly_Hallows_Part_1.jpg" alt="Deathly_Hallows_Part_1">
+            <img id="movie7" src="..\Project\Deathly_Hallows_Part_1.jpg" alt="Deathly_Hallows_Part_1">
          <div class="info">
             <p>Based on Harry Potter and the Deathly Hallows book.</p>
             <p>Released: 19 November 2010.</p>
@@ -102,7 +116,7 @@
          </div>
 
          <div class="images">
-            <img id="8movie" src="..\Project (1)\Deathly_Hallows_Part_2.jpg" alt="Deathly_Hallows_Part_2">
+            <img id="movie8" src="..\Project\Deathly_Hallows_Part_2.jpg" alt="Deathly_Hallows_Part_2">
          <div class="info">
             <p>Based on Harry Potter and the Deathly Hallows book.</p>
             <p>Released: 15 July 2011.</p>
