--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <nav>
       <ul>
-        <li><a class="bookList" href="../Project/index2.html">Harry Potter Books List</a></li>
+        <li><a class="bookList" href="../michael2980/ProjectWeb/index2.html">Harry Potter Books List</a></li>
         <li class="dropdown">
           <a class="interesting" href="#">Interesting Links</a>
           <ul class="dropdown-menu">
