--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
 
       <nav>
          <ul>
-           <li><a class="bookList" href="../michael2980/ProjectWeb/index.html">Harry Potter Movie List</a></li>
+           <li><a class="bookList" href="../ProjectWeb/index.html">Harry Potter Movie List</a></li>
            <li class="dropdown">
              <a class="interesting" href="#">Interesting Links</a>
              <ul class="dropdown-menu">
@@ -42,7 +42,7 @@
 
 
       <div class="container2">
-         <img class="book1" src="../michael2980/ProjectWeb/Harry_Potter_and_the_Sorcerers_Stone.jpg" alt="Philosopher's Stone">
+         <img class="book1" src="../ProjectWeb/Harry_Potter_and_the_Sorcerers_Stone.jpg" alt="Philosopher's Stone">
 
          <p><em class="BookTitle">Sorcerer's Stone</em><br>Harry Potter is the most miserable, lonely boy you can imagine. He’s shunned by his relatives, the Dursleys,
             who have raised him since he was an infant. He’s forced to live in the cupboard under the stairs, forced to
@@ -93,7 +93,7 @@
 
 
 
-         <img class="book2" src="../michael2980/ProjectWeb/Harry_Potter_and_the_Chamber_of_Secrets.jpg" alt="the_Chamber_of_Secret">
+         <img class="book2" src="../ProjectWeb/Harry_Potter_and_the_Chamber_of_Secrets.jpg" alt="the_Chamber_of_Secret">
          <p><em class="BookTitle">Chamber of Secrets</em><br>It’s been another long summer at the Dursley’s for Harry Potter. He can’t wait to get back to Hogwarts and
             is counting down the days until he can return. He’s surprised when, on his birthday, a strange elfish
             creature named Dobby shows up with dire warnings for Harry: He must not return to Hogwarts!
@@ -136,7 +136,7 @@
 
 
 
-         <img class="book3" src="../michael2980/ProjectWeb/prisoner_of_azkaban_b.jpg" alt="Prisoner_of_azkaban">
+         <img class="book3" src="../ProjectWeb/prisoner_of_azkaban_b.jpg" alt="Prisoner_of_azkaban">
          
          <p><em class="BookTitle">Prisoner of Azkaban</em><br>Harry starts off his third year at Hogwarts rather eventfully when he inadvertently blows up his Aunt Marge,
             goes on the run, and is then personally absolved by the Minister of Magic himself. He then learns that mass
@@ -178,7 +178,7 @@
 
 
 
-         <img class="book4" src="../michael2980/ProjectWeb/Harry_Potter_and_the_Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
+         <img class="book4" src="../ProjectWeb/Harry_Potter_and_the_Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
          <p><em class="BookTitle">Goblet of Fire</em><br>Harry can’t believe it. The Weasley’s have invited him to the Quidditch World Cup, which means he’ll get to
             leave the Dursley’s house early and go see a game that anyone would kill to see.
 
@@ -226,7 +226,7 @@
 
 
 
-         <img class="book5" src="../michael2980/ProjectWeb/order_of_the_pheony.jpg" alt="Order_of_the_Phoenix">
+         <img class="book5" src="../ProjectWeb/order_of_the_pheony.jpg" alt="Order_of_the_Phoenix">
          <p><em class="BookTitle">Order of the Phoenix</em><br>It's been another long, hot summer at the Dursleys' for Harry Potter. Having spent most of it in an
             adolescent "funk" of depression and bitterness over the lack of informative letters from his friends about
             Voldemort's return, he's suddenly jolted out of his bad mood when two Dementors show up in the town of
@@ -272,7 +272,7 @@
 
 
 
-         <img class="book6" src="../michael2980/ProjectWeb/harry_potter_hafl-blodd_prince.jpg" alt="Half-Blood_Prince">
+         <img class="book6" src="../ProjectWeb/harry_potter_hafl-blodd_prince.jpg" alt="Half-Blood_Prince">
          <p><em class="BookTitle">Half-Blood Prince</em><br>Harry's sixth year at Hogwarts opens to find him more mellow and grown up than ever. The death of Sirius
             Black has left an indelible mark on him, and he's more determined than ever to put an end to Voldemort and
             his Death Eaters. He's happy to escape the tyranny of the Dursley's early in the summer when Dumbledore
@@ -315,7 +315,7 @@
 
 
 
-         <img class="book7" src="../michael2980/ProjectWeb/Harry_Potter_and_the_Deathly_Hallows.jpg" alt="Deathly_Hallows">
+         <img class="book7" src="../ProjectWeb/Harry_Potter_and_the_Deathly_Hallows.jpg" alt="Deathly_Hallows">
          <p><em class="BookTitle">Deathly Hollows</em><br>Harry has finally come of age, and finally started on his final journey to defeat Voldemort for good. The
             Durselys are forced to go into hiding so that Voldemort’s Death Eaters will not torture them for
             information, and Harry sets off with Ron and Hermione on a difficult quest to find and destroy the last of
