--- a/index.html
+++ b/index.html
@@ -5,54 +5,72 @@
    <title>Harry Potter Movies and Books</title>
    <link id="csslink" href="main.css" rel="stylesheet">
 
-   	<!-- Next is the JavaScript code that makes the "Switch Style" button work. -->
-      <script>
-         function toggleCSS() {
-            // Obtains the <link> element that links to the css (by using its id).
-            var currentCSS = document.getElementById('csslink');
-  
-            // Change the value of href attribute to change the css file.
-            if (currentCSS.getAttribute('href') == 'main.css') {
-              currentCSS.setAttribute('href', 'alternate.css');
-            } else {
-              currentCSS.setAttribute('href', 'main.css');
-            }
-        }
-    </script>
+   <!-- Next is the JavaScript code that makes the "Switch Style" button work. -->
+   <script>
+      function toggleCSS() {
+         // Obtains the <link> element that links to the css (by using its id).
+         var currentCSS = document.getElementById('csslink');
+
+         // Change the value of href attribute to change the css file.
+         if (currentCSS.getAttribute('href') == 'main.css') {
+            currentCSS.setAttribute('href', 'alternate.css');
+         } else {
+            currentCSS.setAttribute('href', 'main.css');
+         }
+      }
+   </script>
 </head>
 
 <body class="background">`
 
-   
+
    <h1>Basic information of Harry Potter movies and books.</h1>
 
    <nav>
       <ul>
-        <li><a class="bookList" href="../michael2980/ProjectWeb/index2.html">Harry Potter Books List</a></li>
-        <li class="dropdown">
-          <a class="interesting" href="#">Interesting Links</a>
-          <ul class="dropdown-menu">
-            <li><a id="webLinks" href="https://www.wizardingworld.com/" target="_blank">Wizarding World Website</a></li>
-            <li><a id="webLinks" href="https://www.mugglenet.com/" target="_blank">Cool Facts Website (mugglenet)</a></li>
-          </ul>
-        </li>
+         <li><a class="bookList" href="../ProjectWeb/index2.html">Harry Potter Books List</a></li>
+         <li class="dropdown">
+            <a class="interesting" href="#">Interesting Links</a>
+            <ul class="dropdown-menu">
+               <li><a id="webLinks" href="https://www.wizardingworld.com/" target="_blank">Wizarding World Website</a>
+               </li>
+               <li><a id="webLinks" href="https://www.mugglenet.com/" target="_blank">Cool Facts Website (mugglenet)</a>
+               </li>
+            </ul>
+         </li>
       </ul>
-    </nav>
-   
+   </nav>
+
    <section>
       <h2>Order of the Harry Potter movies.</h2>
       <p>
 
       <div class="ListContainer">
          <ul class="UL">
-            <div class="movielink1"><li><a href="#movie1">Harry Potter and the Philosopher's Stone</a></li></div>
-            <div class="movielink2"><li><a href="#movie2">Harry Potter and the Chamber of Secrets</a></li></div>
-            <div class="movielink3"><li><a href="#movie3">Harry Potter and the Prisoner of Azkaban</a></li></div>
-            <div class="movielink4"><li><a href="#movie4">Harry Potter and the Goblet of Fire</a></li></div>
-            <div class="movielink5"><li><a href="#movie5">Harry Potter and the Order of the Phoenix</a></li></div>
-            <div class="movielink6"><li><a href="#movie6">Harry Potter and the Half-Blood Prince</a></li></div>
-            <div class="movielink7"><li><a href="#movie7">Harry Potter and the Deathly Hallows Part 1</a></li></div>
-            <div class="movielink8"><li><a href="#movie8">Harry Potter and the Deathly Hallows Part 2</a></li></div>
+            <div class="movielink1">
+               <li><a href="#movie1">Harry Potter and the Philosopher's Stone</a></li>
+            </div>
+            <div class="movielink2">
+               <li><a href="#movie2">Harry Potter and the Chamber of Secrets</a></li>
+            </div>
+            <div class="movielink3">
+               <li><a href="#movie3">Harry Potter and the Prisoner of Azkaban</a></li>
+            </div>
+            <div class="movielink4">
+               <li><a href="#movie4">Harry Potter and the Goblet of Fire</a></li>
+            </div>
+            <div class="movielink5">
+               <li><a href="#movie5">Harry Potter and the Order of the Phoenix</a></li>
+            </div>
+            <div class="movielink6">
+               <li><a href="#movie6">Harry Potter and the Half-Blood Prince</a></li>
+            </div>
+            <div class="movielink7">
+               <li><a href="#movie7">Harry Potter and the Deathly Hallows Part 1</a></li>
+            </div>
+            <div class="movielink8">
+               <li><a href="#movie8">Harry Potter and the Deathly Hallows Part 2</a></li>
+            </div>
          </ul>
       </div>
 
@@ -60,69 +78,69 @@
       <div class="container">
 
          <div class="images">
-            <img id="movie1" src="..\Project\Philosopher's_Stone.jpg" alt="Philosopher's Stone">
-         <div class="info">
-            <p>Based on Harry Potter and the Philosopher's Stone book.</p>
-            <p>Released: 16 November 2001.</p>
-         </div>
-         </div>
-
-         <div class="images">
-            <img id="movie2" src="..\Project\the_Chamber_of_Secret.jpg" alt="the_Chamber_of_Secret">
-         <div class="info">
-            <p>Based on Harry Potter and the Chamber of Secrets.</p>
-            <p>Released: 15 November 2002.</p>
-         </div>
+            <img id="movie1" src="../ProjectWeb/Philosopher's_Stone.jpg" alt="Philosopher's Stone">
+            <div class="info">
+               <p>Based on Harry Potter and the Philosopher's Stone book.</p>
+               <p>Released: 16 November 2001.</p>
+            </div>
          </div>
 
          <div class="images">
-            <img id="movie3" src="..\Project\Prisoner_of_azkaban.jpg" alt="Prisoner_of_azkaban">
-         <div class="info">
-            <p>Based on Harry Potter and the Prisoner of Azkaban book.</p>
-            <p>Released: 4 June 2004.</p>
-         </div>
-         </div>
-
-         <div class="images">
-            <img id="movie4" src="..\Project\Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
-         <div class="info">
-            <p>Based on Harry Potter and the Goblet of Fire book.</p>
-            <p>Released: 18 November 2005.</p>
-         </div>
+            <img id="movie2" src="../ProjectWeb/the_Chamber_of_Secret.jpg" alt="the_Chamber_of_Secret">
+            <div class="info">
+               <p>Based on Harry Potter and the Chamber of Secrets.</p>
+               <p>Released: 15 November 2002.</p>
+            </div>
          </div>
 
          <div class="images">
-            <img id="movie5" src="..\Project\Order_of_the_Phoenix.jpg" alt="Order_of_the_Phoenix">
-         <div class="info">
-            <p>Based on Harry Potter and the Order of the Phoenix book.</p>
-            <p>Released: 11 July 2007.</p>
-         </div>
-         </div>
-
-         <div class="images">
-            <img id="movie6" src="..\Project\Half-Blood_Prince.jpg" alt="Half-Blood_Prince">
-         <div class="info">
-            <p>Based on Harry Potter and the Half-Blood Prince book.</p>
-            <p>Released: 15 July 2009.</p>
-         </div>
+            <img id="movie3" src="../ProjectWeb/Prisoner_of_azkaban.jpg" alt="Prisoner_of_azkaban">
+            <div class="info">
+               <p>Based on Harry Potter and the Prisoner of Azkaban book.</p>
+               <p>Released: 4 June 2004.</p>
+            </div>
          </div>
 
          <div class="images">
-            <img id="movie7" src="..\Project\Deathly_Hallows_Part_1.jpg" alt="Deathly_Hallows_Part_1">
-         <div class="info">
-            <p>Based on Harry Potter and the Deathly Hallows book.</p>
-            <p>Released: 19 November 2010.</p>
-         </div>
+            <img id="movie4" src="../ProjectWeb/Goblet_of_Fire.jpg" alt="Goblet_of_Fire">
+            <div class="info">
+               <p>Based on Harry Potter and the Goblet of Fire book.</p>
+               <p>Released: 18 November 2005.</p>
+            </div>
          </div>
 
          <div class="images">
-            <img id="movie8" src="..\Project\Deathly_Hallows_Part_2.jpg" alt="Deathly_Hallows_Part_2">
-         <div class="info">
-            <p>Based on Harry Potter and the Deathly Hallows book.</p>
-            <p>Released: 15 July 2011.</p>
+            <img id="movie5" src="../ProjectWeb/Order_of_the_Phoenix.jpg" alt="Order_of_the_Phoenix">
+            <div class="info">
+               <p>Based on Harry Potter and the Order of the Phoenix book.</p>
+               <p>Released: 11 July 2007.</p>
+            </div>
          </div>
+
+         <div class="images">
+            <img id="movie6" src="../ProjectWeb/Half-Blood_Prince.jpg" alt="Half-Blood_Prince">
+            <div class="info">
+               <p>Based on Harry Potter and the Half-Blood Prince book.</p>
+               <p>Released: 15 July 2009.</p>
+            </div>
          </div>
-         
+
+         <div class="images">
+            <img id="movie7" src="../ProjectWeb/Deathly_Hallows_Part_1.jpg" alt="Deathly_Hallows_Part_1">
+            <div class="info">
+               <p>Based on Harry Potter and the Deathly Hallows book.</p>
+               <p>Released: 19 November 2010.</p>
+            </div>
+         </div>
+
+         <div class="images">
+            <img id="movie8" src="../ProjectWeb/Deathly_Hallows_Part_2.jpg" alt="Deathly_Hallows_Part_2">
+            <div class="info">
+               <p>Based on Harry Potter and the Deathly Hallows book.</p>
+               <p>Released: 15 July 2011.</p>
+            </div>
+         </div>
+
       </div>
    </section>
 
@@ -179,14 +197,15 @@
 
    </section>
 
-   
-   	<!-- This is the "Switch Style" button used to toggle between CSS files. 
-	     It may be placed anywhere on your page. --> 
-        <button class="switchButton" onclick="toggleCSS()">Switch Style</button>
+
+   <!-- This is the "Switch Style" button used to toggle between CSS files. 
+	     It may be placed anywhere on your page. -->
+   <button class="switchButton" onclick="toggleCSS()">Switch Style</button>
 
    <footer>
       <p>Copyright © 2023 by Michael, Yoandry</p>
    </footer>
 
 </body>
+
 </html>
